--- a/device/raspberry/pi4b/config
+++ b/device/raspberry/pi4b/config
@@ -1,14 +1,19 @@
 ARCH="aarch64"
+
 KERNEL="https://github.com/raspberrypi/linux.git#rpi-6.6.y"
 KERNEL_CONFIG="bcm2711_defconfig"
 KERNEL_EXTRACONFIG="--module NTFS3_FS --enable NTFS3_LZX_XPRESS --enable NTFS3_FS_POSIX_ACL --disable NTFS3_64BIT_CLUSTER"
 DTB="broadcom/bcm2711-rpi-4-b"
+
 CMDLINE="dwc_otg.lpm_enable=0 console=ttyS0,115200 console=tty1 root=/dev/mmcblk0p2 rootfstype=ext4 elevator=deadline fsck.repair=yes rootwait"
 NEED_INITRD=no
 
+# disk section
 # /boot is vfat partition
 BOOT_FSTYPE="vfat"
 BOOT_SIZE="256MB"
 # / is ext4 partition
 ROOT_FSTYPE="ext4"
 ROOT_SIZE="1024MB"
+
+PRESET_CONFIG="local_config"
