--- a/utils/kernel.template
+++ b/utils/kernel.template
@@ -7,16 +7,20 @@ Release:        1
 Summary:        kernel for {BOARD_NAME} devices
 Group:          System/Kernel and hardware
 Source0:        kernel.tar
-Source1:        {KERNEL_CONFIG}
+# This line will be conditionally included or removed
+{Source1}
 License:        GPLv2
 Provides:       kernel = %{EVRD}
 
 %description
-kernel for ${BOARD_NAME}
+kernel for {BOARD_NAME}
 
 %prep
 %autosetup -p1 -n kernel
-cp %{S:1} .config
+
+# If Source1 is defined, include this line
+{SOURCE1_COMMAND}
+
 grep -Irl /lib/modules | xargs sed -i -e 's,/lib/modules,%{_modulesdir},g' -e 's,/usr/usr/lib/modules,/usr/lib/modules,g'
 
 %build
