--- a/utils/kernel.template
+++ b/utils/kernel.template
@@ -24,6 +24,7 @@ kernel for {BOARD_NAME}
 grep -Irl /lib/modules | xargs sed -i -e 's,/lib/modules,%{_modulesdir},g' -e 's,/usr/usr/lib/modules,/usr/lib/modules,g'
 
 %build
+{MAKE_DEFCONFIG}
 %make_build CROSS_COMPILE=/usr/bin/{ARCH}-linux-gnu- ARCH={KERNEL_ARCH}
 
 %install
