--- a/device/raspberry/pi4b/config
+++ b/device/raspberry/pi4b/config
@@ -8,6 +8,9 @@ DTB="broadcom/bcm2711-rpi-4-b"
 CMDLINE="dwc_otg.lpm_enable=0 console=ttyS0,115200 console=tty1 root=/dev/mmcblk0p2 rootfstype=ext4 elevator=deadline fsck.repair=yes rootwait"
 NEED_INITRD=no
 
+UBOOT="https://github.com/radxa/u-boot.git"
+UBOOT_VERSION="next-dev-v2024.03"
+
 # disk section
 # /boot is vfat partition
 BOOT_FSTYPE="vfat"
