--- a/device/rockchip/ok3568c/config
+++ b/device/rockchip/ok3568c/config
@@ -6,3 +6,6 @@ UBOOT_VERSION="next-dev-v2024.03"
 UBOOT_CONFIG="ok3568c-rk3568_defconfig"
 DTB="rockchip/rk3568-ok3568c"
 CMDLINE="earlycon=uart8250,mmio32,0xfeb50000 console=ttyFIQ0 console=tty1 consoleblank=0 irqchip.gicv3_pseudo_nmi=0 switolb=1 coherent_pool=2M cgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory swapaccount=1"
+
+ROOT_SIZE="1024MB"
+ROOT_FSTYPE="ext4"
