--- a/device/rockchip/ok3568c/config
+++ b/device/rockchip/ok3568c/config
@@ -1,11 +1,34 @@
 ARCH="aarch64"
+BOOT_SOC="rk3568"
+
+# kernel section
 KERNEL="https://github.com/armbian/linux-rockchip.git#rk-6.1-rkr3"
 KERNEL_CONFIG="rockchip_linux_defconfig"
+DTB="rockchip/rk3568-ok3568c"
+
+# u-boot section
 UBOOT="https://github.com/radxa/u-boot.git"
 UBOOT_VERSION="next-dev-v2024.03"
-UBOOT_CONFIG="ok3568c-rk3568_defconfig"
-DTB="rockchip/rk3568-ok3568c"
+UBOOT_CONFIG="rk3568-ok3568c_defconfig"
+
+# cmdline
 CMDLINE="earlycon=uart8250,mmio32,0xfeb50000 console=ttyFIQ0 console=tty1 consoleblank=0 irqchip.gicv3_pseudo_nmi=0 switolb=1 coherent_pool=2M cgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory swapaccount=1"
 
+# disk section
+# /boot is vfat partition
+BOOT_FSTYPE="vfat"
+BOOT_SIZE="256MB"
+# / is ext4 partition
 ROOT_SIZE="1024MB"
 ROOT_FSTYPE="ext4"
+
+# platform section
+# # put it in blobs dir
+RK_DDR="rk3568_ddr_1560MHz_v1.21.bin"
+BL31="rk3568_bl31_v1.44.elf"
+MKIMAGE_CMD="tools/mkimage -n {BOOT_SOC} -T rksd -d {RK_DDR}:spl/u-boot-spl.bin idbloader.img"
+UBOOT_BUILD="make BL31={BL31} spl/u-boot-spl.bin u-boot.dtb u-boot.itb CROSS_COMPILE='{ARCH}-linux-gnu-'"
+# make BL31=rk3568_bl31_v1.44.elf spl/u-boot-spl.bin u-boot.dtb u-boot.itb CROSS_COMPILE="aarch64-linux-gnu-"
+
+# dd if=idbloader.img of=/dev/loop1 seek=64 conv=notrunc status=none
+# dd if=u-boot.itb of=/dev/loop1 seek=16384 conv=notrunc status=none
