--- a/device/rockchip/ok3568c/config
+++ b/device/rockchip/ok3568c/config
@@ -13,7 +13,7 @@ UBOOT_CONFIG="rk3568-ok3568c_defconfig"
 
 # cmdline
 CMDLINE="earlycon=uart8250,mmio32,0xfeb50000 console=ttyFIQ0 console=tty1 consoleblank=0 irqchip.gicv3_pseudo_nmi=0 switolb=1 coherent_pool=2M cgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory swapaccount=1"
-EXTRA_PKGS="uboot-tools dracut neovim"
+EXTRA_PKGS="uboot-tools dracut"
 
 # disk section
 # /boot is vfat partition
