--- a/device/rockchip/ok3568c/config
+++ b/device/rockchip/ok3568c/config
@@ -3,8 +3,8 @@ BOOT_SOC="rk3568"
 
 # kernel section
 KERNEL="https://github.com/armbian/linux-rockchip.git#rk-6.1-rkr3"
-KERNEL_CONFIG="kernel_ok3568_defconfig"
-DTB="rockchip/rk3568-ok3568c"
+PRESET_CONFIG="kernel_ok3568_defconfig"
+DTB="dtbs/rockchip/rk3568-ok3568c"
 
 # u-boot section
 UBOOT="https://github.com/radxa/u-boot.git"
@@ -12,7 +12,8 @@ UBOOT_VERSION="next-dev-v2024.03"
 UBOOT_CONFIG="rk3568-ok3568c_defconfig"
 
 # cmdline
-CMDLINE="earlycon=uart8250,mmio32,0xfeb50000 console=ttyFIQ0 console=tty1 consoleblank=0 irqchip.gicv3_pseudo_nmi=0 switolb=1 coherent_pool=2M cgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory swapaccount=1"
+# root=/dev/mmcblk1p2 rootwait rootfstype=ext4 splash=verbose console=ttyS2,1500000 console=tty1 consoleblank=0 loglevel=1 earlycon=uart8250,mmio32,0xfe660000 console=ttyFIQ0 cma=256M androidboot.fwver=bl31-v1.44,uboot-rmbian-201-11/11/2024
+CMDLINE="earlycon=uart8250,mmio32,0xfeb50000 console=ttyFIQ0 console=tty1 consoleblank=0"
 EXTRA_PKGS="uboot-tools dracut"
 
 # disk section
