do not run rpmlint over kernel rpms

--- a/utils/kernel.template
+++ b/utils/kernel.template
@@ -1,5 +1,6 @@
 %global debug_package %{nil}
 %global _build_pkgcheck_set %nil
+%global _build_pkgcheck_srpm %nil
 %global _modulesdir     /usr/lib/modules
 
 Name:           kernel-{BOARD_NAME}
