--- a/device/rockchip/ok3568c/mkosi.conf
+++ b/device/rockchip/ok3568c/mkosi.conf
@@ -1,3 +1,8 @@
+[Config]
+MinimumVersion=24
+Dependencies=
+	u-boot
+
 [Distribution]
 Distribution=rosa
 Release=rosa13
@@ -31,3 +36,9 @@ Timezone=Europe/Moscow
 Hostname=elara
 WithDocs=no
 CleanPackageMetadata=false
+
+[Build]
+WithNetwork=yes
+
+BuildSources=./:mkosi
+             ./mkosi.images/u-boot/configuration:configuration
