add rpi5 (also good for rpi4)

--- a/device/raspberry/rpi5/mkosi.conf
+++ b/device/raspberry/rpi5/mkosi.conf
@@ -1,30 +1,21 @@
-[Config]
-MinimumVersion=24
-Dependencies=
-	u-boot
-
 [Distribution]
 Distribution=rosa
 Release=rosa13
 Architecture=arm64
 
-[Build]
-WithNetwork=yes
-BuildSources=./:mkosi
-             ./mkosi.images/u-boot/configuration:configuration
-
 [Output]
 Format=disk
 CompressOutput=
-# nand u-boot does not support
+# RPI firmware does not support
 # 4k sectors
 SectorSize=512
 
 [Content]
 Packages=
-    kernel-6.1-rockchip
+    kernel-6.12-generic
+    raspberrypi-bootloader
     coreutils
-    dnf
+    dnf5
     neovim
     dracut
     iproute2
@@ -32,7 +23,6 @@ Packages=
     openssh-server
     rosa-repos
     systemd
-    uboot-tools
 
 Bootable=no
 Autologin=yes
@@ -40,6 +30,9 @@ RootPassword=root
 RootShell=/usr/bin/bash
 Locale=en_US.UTF-8
 Timezone=Europe/Moscow
-Hostname=elara
+Hostname=raspberrypi
 WithDocs=no
 CleanPackageMetadata=false
+
+[Build]
+WithNetwork=yes
