--- a/device/raspberry/rpi5/mkosi.conf
+++ b/device/raspberry/rpi5/mkosi.conf
@@ -5,7 +5,7 @@ Architecture=arm64
 
 [Output]
 Format=disk
-CompressOutput=
+CompressOutput=xz
 # RPI firmware does not support
 # 4k sectors
 SectorSize=512
