--- a/device/raspberry/rpi5/mkosi.conf
+++ b/device/raspberry/rpi5/mkosi.conf
@@ -6,6 +6,7 @@ Architecture=arm64
 [Output]
 Format=disk
 CompressOutput=xz
+ImageId=rosapi
 # RPI firmware does not support
 # 4k sectors
 SectorSize=512
