add generic device

--- a/device/generic/mkosi.conf
+++ b/device/generic/mkosi.conf
@@ -14,12 +14,14 @@ CompressOutput=
 Packages=
     kernel-6.12-generic
     coreutils
+    locales-en
+    procps-ng
     systemd
     systemd-boot
 
 Bootable=yes
 Bootloader=systemd-boot
-#Bootloader=uki
+# Bootloader=uki
 
 Autologin=yes
 RootPassword=root
