--- a/device/raspberry/rpi5/mkosi.repart/00-boot.conf
+++ b/device/raspberry/rpi5/mkosi.repart/00-boot.conf
@@ -2,6 +2,7 @@
 Type=esp
 Label=bootfs
 Format=vfat
-CopyFiles=/boot/firmware:/firmware
+CopyFiles=/boot/firmware:/
+MountPoint=/boot/firmware
 SizeMinBytes=256M
 SizeMaxBytes=256M
