--- a/device/rockchip/orangepi5/mkosi.conf
+++ b/device/rockchip/orangepi5/mkosi.conf
@@ -20,12 +20,12 @@ CompressOutput=
 # 4k sectors
 SectorSize=512
 
+#kernel-6.1-orangepi
 [Content]
 Packages=
     coreutils
     kernel-6.1-orangepi
     dnf
-    neovim
     dracut
     iproute2
     locales-en
