--- a/device/rockchip/orangepi5/mkosi.conf
+++ b/device/rockchip/orangepi5/mkosi.conf
@@ -14,7 +14,8 @@ BuildSources=./:mkosi
              ./mkosi.images/u-boot/configuration:configuration
 
 [Output]
-Format=directory
+#Format=directory
+Format=disk
 CompressOutput=
 # nand u-boot does not support
 # 4k sectors
@@ -24,16 +25,22 @@ SectorSize=512
 [Content]
 Packages=
     coreutils
+    passwd
     kernel-6.1-orangepi
     dnf
     dracut
     iproute2
     locales-en
     openssh-server
+    xauth
     rosa-repos
     rosa-repos-contrib
     systemd
+    task-x11
+    gstreamer1.0-plugins-good
+    gstreamer1.0-plugins-bad
     uboot-tools
+    camera_engine_rkaiq
 
 Bootable=no
 Autologin=yes
@@ -44,4 +51,4 @@ Timezone=Europe/Moscow
 Hostname=orangepi5
 WithDocs=no
 CleanPackageMetadata=false
-WithRecommends=no
+WithRecommends=yes
