--- a/device/rockchip/orangepi5/mkosi.repart/00-uboot.conf
+++ b/device/rockchip/orangepi5/mkosi.repart/00-uboot.conf
@@ -1,5 +1,5 @@
 [Partition]
-Type=esp
-Format=vfat
-SizeMinBytes=15M
-SizeMaxBytes=15M
+Type=21686148-6449-6e6f-744e-656564454649
+#Format=vfat
+SizeMinBytes=16M
+SizeMaxBytes=16M
