rename repka to allwinner platform

--- a/device/allwinner/repkapi4/mkosi.conf
+++ b/device/allwinner/repkapi4/mkosi.conf
@@ -11,7 +11,7 @@ WithNetwork=yes
 
 [Output]
 Format=disk
-CompressOutput=xz
+CompressOutput=
 # nand u-boot does not support
 # 4k sectors
 SectorSize=512
