fix UART console, add blobs for wifi

--- a/device/allwinner/repkapi4/mkosi.conf
+++ b/device/allwinner/repkapi4/mkosi.conf
@@ -19,14 +19,16 @@ SectorSize=512
 [Content]
 Packages=
     coreutils
-    passwd
-    kernel-6.6-repka
     dnf
     dracut
     iproute2
+    iw
+    neovim
+    kernel-6.6-repka
+    linux-firmware-brcm
     locales-en
     openssh-server
-    xauth
+    passwd
     rosa-repos
     rosa-repos-contrib
     systemd
@@ -39,7 +41,7 @@ RootPassword=root
 RootShell=/usr/bin/bash
 Locale=en_US.UTF-8
 Timezone=Europe/Moscow
-Hostname=orangepi5
+Hostname=repkapi
 WithDocs=no
 CleanPackageMetadata=false
-WithRecommends=yes
+WithRecommends=no
