comsetic cleanup, added wpa_supplicant and networkmanager

--- a/device/allwinner/repkapi4/mkosi.conf
+++ b/device/allwinner/repkapi4/mkosi.conf
@@ -25,6 +25,8 @@ Packages=
     iw
     neovim
     kernel-6.6-repka
+    networkmanager
+    wpa_supplicant
     linux-firmware-brcm
     locales-en
     openssh-server
