--- a/device/loongarch64/3d5000/mkosi.conf
+++ b/device/loongarch64/3d5000/mkosi.conf
@@ -14,17 +14,20 @@ CompressOutput=
 Packages=
     coreutils
     dnf
+    rosa-repos-main
+    dracut
     kernel-6.12-generic
     locales-en
     neovim
     networkmanager
     procps-ng
     systemd
+    grub2-efi
+    grub2
     systemd-boot
 
 Bootable=yes
 Bootloader=systemd-boot
-# Bootloader=uki
 
 Autologin=yes
 RootPassword=root
@@ -36,3 +39,6 @@ WithDocs=no
 WithRecommends=no
 # keep rpm db
 CleanPackageMetadata=false
+
+[UKIProfile]
+Cmdline=ttyS0
