--- a/device/riscv64/orangepirv2/mkosi.conf
+++ b/device/riscv64/orangepirv2/mkosi.conf
@@ -6,11 +6,8 @@ Distribution=rosa
 Release=rosa13
 Architecture=riscv64
 
-[Build]
-WithNetwork=yes
-
 [Output]
-Format=disk
+Format=directory
 CompressOutput=
 # nand u-boot does not support
 # 4k sectors
