--- a/device/riscv64/orangepirv2/mkosi.conf
+++ b/device/riscv64/orangepirv2/mkosi.conf
@@ -7,7 +7,8 @@ Release=rosa13
 Architecture=riscv64
 
 [Output]
-Format=directory
+#Format=directory
+Format=disk
 CompressOutput=
 # nand u-boot does not support
 # 4k sectors
@@ -21,7 +22,7 @@ Packages=
     iproute2
     iw
     neovim
-    kernel-6.6-orangepirv2
+    kernel-6.14-spacemit
     wpa_supplicant
     linux-firmware-brcm
     locales-en
