big cleanup, use another bootloader stuff, add wifi module autoload, tune uboot dd script

--- a/device/riscv64/orangepirv2/mkosi.conf
+++ b/device/riscv64/orangepirv2/mkosi.conf
@@ -18,7 +18,10 @@ SectorSize=512
 Packages=
     coreutils
     dnf5
+    sudo
     dracut
+    pciutils
+    usbutils
     iproute2
     iw
     neovim
