--- a/device/riscv64/orangepirv2/mkosi.conf
+++ b/device/riscv64/orangepirv2/mkosi.conf
@@ -30,6 +30,7 @@ Packages=
     linux-firmware-brcm
     locales-en
     openssh-server
+    ncurses-extraterms
     passwd
     rosa-repos
     rosa-repos-contrib
