use armbian-firmawre

--- a/device/allwinner/repkapi4/mkosi.conf
+++ b/device/allwinner/repkapi4/mkosi.conf
@@ -19,7 +19,7 @@ SectorSize=512
 [Content]
 Packages=
     coreutils
-    dnf
+    dnf5
     dracut
     iproute2
     iw
@@ -27,7 +27,8 @@ Packages=
     kernel-6.6-repka
     networkmanager
     wpa_supplicant
-    linux-firmware-brcm
+    armbian-firmware
+    iwd
     locales-en
     openssh-server
     passwd
