--- a/device/riscv64/orangepirv2/mkosi.conf
+++ b/device/riscv64/orangepirv2/mkosi.conf
@@ -24,10 +24,11 @@ Packages=
     usbutils
     iproute2
     iw
+    iwd
     neovim
     kernel-6.6-spacemit
     wpa_supplicant
-    linux-firmware-brcm
+    armbian-firmware
     locales-en
     openssh-server
     ncurses-extraterms
