fix ok3568c hostname

--- a/device/rockchip/ok3568c/mkosi.conf
+++ b/device/rockchip/ok3568c/mkosi.conf
@@ -40,6 +40,6 @@ RootPassword=root
 RootShell=/usr/bin/bash
 Locale=en_US.UTF-8
 Timezone=Europe/Moscow
-Hostname=elara
+Hostname=ok3568c-board
 WithDocs=no
 CleanPackageMetadata=false
