fix loongarch64 3d5000 machine and QEMU

--- a/device/loongarch64/3d5000/mkosi.conf
+++ b/device/loongarch64/3d5000/mkosi.conf
@@ -14,20 +14,20 @@ CompressOutput=
 Packages=
     coreutils
     dnf
+    vim
     rosa-repos-main
+    dosfstools
     dracut
-    kernel-6.12-generic
+    kernel-6.17-generic
     locales-en
     neovim
     networkmanager
     procps-ng
     systemd
-    grub2-efi
-    grub2
     systemd-boot
 
-Bootable=yes
-Bootloader=systemd-boot
+Bootable=no
+#Bootloader=systemd-boot
 
 Autologin=yes
 RootPassword=root
@@ -39,6 +39,3 @@ WithDocs=no
 WithRecommends=no
 # keep rpm db
 CleanPackageMetadata=false
-
-[UKIProfile]
-Cmdline=ttyS0
