--- a/device/loongarch64/3d5000/mkosi.conf
+++ b/device/loongarch64/3d5000/mkosi.conf
@@ -13,6 +13,8 @@ CompressOutput=
 [Content]
 Packages=
     coreutils
+    ncurses-extraterms
+    basesystem-minimal
     dnf
     vim
     rosa-repos-main
@@ -27,7 +29,6 @@ Packages=
     systemd-boot
 
 Bootable=no
-#Bootloader=systemd-boot
 
 Autologin=yes
 RootPassword=root
