--- a/device/loongarch64/3d5000/mkosi.conf
+++ b/device/loongarch64/3d5000/mkosi.conf
@@ -21,8 +21,8 @@ Packages=
     dosfstools
     dracut
     kernel-6.17-generic
+    linux-firmware
     locales-en
-    neovim
     networkmanager
     procps-ng
     systemd
